added new fields part type and part name

--- a/app/src/scss/3_global.scss
+++ b/app/src/scss/3_global.scss
@@ -239,7 +239,7 @@
 	top:42%;
 }
 
-// --------- marble colors ---------
+// --------- colors ---------
 .white{color:#FFFEF3;}
 .black{color:#1C2026;}
 .red{color:#F15847;}
