--- a/app/views/panel_dashboard.jade
+++ b/app/views/panel_dashboard.jade
@@ -23,15 +23,13 @@
 			a.filter-button(href="#dashboardModal") Filter Parts
 			br
 			br
-			table#dashboardTable.tablesorter(style="width:30%;float:left")
+			table#dashboardTable.tablesorter(style="width:30%;float:left;margin-top:-38px;")
 				thead
 					tr 
 						th PART ID
-				tbody#dashboardBody
-				tr
-					td
+				tbody#dashboardBody				
 
-			table#batchDetailsTable.tablesorter(style="width:64%;float:right;margin-bottom:80px;")
+			table#batchDetailsTable.tablesorter(hidden style="margin-top:-46px;width:64%;float:right;margin-bottom:80px;")
 				thead
 					tr 
 						th#bDetHeader(colspan="2" style="font-size: 12px;")
