--- a/app/views/panel_createPart.jade
+++ b/app/views/panel_createPart.jade
@@ -20,6 +20,12 @@
 							input(type="text" name="PartCode" placeholder="Part Code")
 				tr
 					td
+						h5 Batch Code:
+					td
+						legend 
+							input#batchCode(type="text" name="BatchCode" placeholder="Batch Code")
+				tr
+					td
 						h5 Part Type:
 					td
 						legend 
