qr code client side

--- a/app/views/panel_dashboard.jade
+++ b/app/views/panel_dashboard.jade
@@ -32,5 +32,6 @@
 			table#batchDetailsTable.tablesorter(hidden style="margin-top:-46px;width:64%;float:right;margin-bottom:80px;")
 				thead
 					tr 
-						th#bDetHeader(colspan="2" style="font-size: 12px;")
+						th#bDetHeader(colspan="2" style="font-size:12px;padding-left:27px;")
 				tbody#batchDetailsBody
+			#part-qrcode(hidden)
